# rknn_parallel_deploy

./: CMakeLists.txt  README.md  build-linux_RK3562.sh
include/: frame.h
model/: yn.rknn
python/: rtmpose.py  test.py
src/: main.cpp
src/model/: model.cpp  model.h  model_manager.hpp  rknn.cpp  rknn.h
src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/utils/: rknnPool.hpp
